# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
source_root = "//test/testfwk/arkxtest/testserver"

ohos_unittest("testserver_unittest") {
  sources = [
    "${source_root}/test/unittest/mock_permission.cpp",
    "${source_root}/test/unittest/start_test_server.cpp",
    "${source_root}/test/unittest/test_server_client_test.cpp",
    "${source_root}/test/unittest/test_server_service_test.cpp",
  ]
  deps = [
    "${source_root}/src:test_server_client",
    "${source_root}/src:test_server_service",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "pasteboard:pasteboard_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  include_dirs = [
    "${source_root}/src/service",
    "${source_root}/src/client",
    "${source_root}/src/utils",
    "${target_gen_dir}/../src",
  ]
  ldflags = [ "--coverage" ]
  cflags = [ "--coverage" ]
  cflags_cc = [ "--coverage" ]
  use_exceptions = true
  module_out_path = "testserver/unittest"
  testonly = true
  subsystem_name = "testfwk"
  part_name = "arkxtest"
}
