# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
source_root = "../../.."

##############################fuzztest##########################################
ohos_fuzztest("CreateSessionFuzzTest") {
  module_out_path = "arkxtest/testserver"
  fuzz_config_file = "${source_root}/test/fuzztest/createsession_fuzzer"
  deps = [ "${source_root}/src:test_server_client" ]
  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  include_dirs = [
    "${source_root}/src/client",
    "${source_root}/src/utils",
    "${target_gen_dir}/../src",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "createsession_fuzzer.cpp" ]
}
